--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,11 @@
     "author": "Tomasz Kedziora",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.17.1"
+        "bcryptjs": "^2.4.3",
+        "express": "^4.17.1",
+        "express-mongo-sanitize": "^1.3.2",
+        "mongoose": "^5.9.3",
+        "validator": "^12.2.0"
     },
     "devDependencies": {
         "dotenv": "^8.2.0",
