--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "express-mongo-sanitize": "^1.3.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.3",
         "validator": "^12.2.0"
     },
