--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "author": "Tomasz Kedziora",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "express": "^4.17.1",
         "express-mongo-sanitize": "^1.3.2",
