--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
         "axios": "^0.19.2",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "express": "^4.17.1",
         "express-mongo-sanitize": "^1.3.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.3",
+        "nodemailer": "^6.4.6",
         "validator": "^12.2.0"
     },
     "devDependencies": {
