--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express-mongo-sanitize": "^1.3.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.3",
+        "multer": "^1.4.2",
         "nodemailer": "^6.4.6",
         "validator": "^12.2.0"
     },
