--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-chartkick": "^0.6.0",
     "vue-router": "^3.1.6",
     "vue-star-rating": "^1.6.1",
     "vuejs-datepicker": "^1.6.2"
