--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
         "mongoose": "^5.9.3",
         "multer": "^1.4.2",
         "nodemailer": "^6.4.6",
+        "sharp": "^0.25.2",
         "validator": "^12.2.0"
     },
     "devDependencies": {
